<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_accueil" >

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="a1507aab2d0d0f2"
        ads:loadAdOnCreate="true" />

    <TextView
        android:id="@+id/homeNewGame"
        style="@style/home_button_text"
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_below="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dip"
        android:background="@drawable/home_button"
        android:gravity="center"
        android:text="@string/new_game" />

    <TextView
        android:id="@+id/homePlayerList"
        style="@style/home_button_text"
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_below="@+id/homeNewGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_button"
        android:gravity="center"
        android:text="@string/player_list" />

    <TextView
        android:id="@+id/homeClassement"
        style="@style/home_button_text"
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_below="@+id/homePlayerList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_button"
        android:gravity="center"
        android:text="@string/classement" />

    <TextView
        android:id="@+id/homeGameList"
        style="@style/home_button_text"
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_below="@+id/homeClassement"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_button"
        android:gravity="center"
        android:text="@string/game_list" />
    
    <TextView
        android:id="@+id/homeBackup"
        style="@style/home_button_text"
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_below="@+id/homeGameList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_button"
        android:gravity="center"
        android:text="@string/backup" />
    
    <TextView
        android:id="@+id/homeRestore"
        style="@style/home_button_text"
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_below="@+id/homeBackup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_button"
        android:gravity="center"
        android:text="@string/restore" />

    <TextView
        android:id="@+id/homeAPropos"
        style="@style/home_button_text"
        android:layout_width="220dip"
        android:layout_height="40dip"
        android:layout_below="@+id/homeRestore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_button"
        android:gravity="center"
        android:text="@string/a_propos" />

</RelativeLayout>