<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="a1507aab2d0d0f2"
        ads:loadAdOnCreate="true" />

    <ImageView
        android:id="@+id/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/no_photo"
        android:scaleType="fitCenter"
        android:src="@drawable/no_photo" />

    <EditText
        android:id="@+id/addPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/playerName"
        android:singleLine="true" />

    <Button
        android:id="@+id/cancelAddPlayerButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/addPseudo"
        android:layout_below="@+id/addPseudo"
        android:layout_marginTop="55dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/okAddPlayerButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancelAddPlayerButton"
        android:layout_alignBottom="@+id/cancelAddPlayerButton"
        android:layout_alignLeft="@+id/addPseudo"
        android:text="@string/ok" />

</RelativeLayout>