<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/priseDetailTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/preneur" />

            <TextView
                android:id="@+id/priseDetailsPreneur"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="0dip" />
        </TableRow>

        <TableRow
            android:id="@+id/priseDetailsAppelRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/appel" />

            <TextView
                android:id="@+id/priseDetailsAppel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <View
            style="@style/priseHR"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prise" />

            <TextView
                android:id="@+id/priseDetailsPrise"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/points" />

            <TextView
                android:id="@+id/priseDetailsPoints"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oudler" />

            <TextView
                android:id="@+id/priseDetailsOudler"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <View
            style="@style/priseHR"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/petite_au_bout" />

            <TextView
                android:id="@+id/priseDetailsPetiteAuBout"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/poignee" />

            <TextView
                android:id="@+id/priseDetailsPoignee"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chelem" />

            <TextView
                android:id="@+id/priseDetailsChelem"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/priseDetailsOkButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priseDetailTableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/ok" />

</RelativeLayout>